Implemented exit syscall

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "files.associations": {
         "complex": "c",
         "interrupt.h": "c",
-        "file.h": "c"
+        "file.h": "c",
+        "filesys.h": "c"
     }
 }
